<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>co.casterlabs.caffeinated</groupId>
	<artifactId>caffeinated</artifactId>
	<version>1.2</version>
	<packaging>pom</packaging>

	<modules>
		<module>built_in_plugins</module>
		<module>core</module>
		<module>plugin_sdk</module>
		<module>ui</module>
		<module>util</module>
		<module>widget_environment</module>
	</modules>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
	</properties>

	<profiles>
		<profile>
			<!-- This helps alleviate mangled builds -->
			<id>DEPLOY_CHANNEL default value</id>
			<activation>
				<property>
					<name>!env.DEPLOY_CHANNEL</name>
				</property>
			</activation>
			<properties>
				<env.DEPLOY_CHANNEL>dev</env.DEPLOY_CHANNEL>
			</properties>
		</profile>
	</profiles>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>11</source>
					<target>11</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.1.0</version>
				<configuration>
					<finalName>${project.name}</finalName>
				</configuration>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<repositories>
		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>
	</repositories>

	<dependencies>
		<!-- Code related packages -->
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.22</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<!-- For Eclipse users -->
			<groupId>org.jetbrains</groupId>
			<artifactId>annotations</artifactId>
			<version>19.0.0</version>
			<scope>provided</scope>
		</dependency>
	</dependencies>
</project>